name:                everything
version:             0.1.0.0
synopsis:            Tool that generates Everything.agda
description:         Build tool which generates a file Everything.agda
                     importing all library modules. This is useful for
                     typechecking the entire library.
homepage:            https://github.com/jlimperg/everything#readme
license:             MIT
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2016 Jannis Limperg and others
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable everything
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , filemanip
                     , filepath
